<resources>
    <string name="peso_kg">Peso (kg)</string>
    <string name="estatura_m">Estatura (m)</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="sensores_del_dispositivo">Sensores del dispositivo</string>
    <string name="compute_imc">Calcular IMC</string>
    <string name="list_sensors">Lista de sensores</string>
    <string name="app_name">ExamenAndroidGuillermo</string>
    <string name="escudo_athletic_desc">Escudo del Athletic</string>
    <string name="options">Options</string>
</resources>